--- a/CHUYENXEBACAI/appsettings.json
+++ b/CHUYENXEBACAI/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=chuyenxebacai;Username=app_user;Password=0842200124;Include Error Detail=true"
+  },
+  "Jwt": {
+    "Issuer": "cxb",
+    "Audience": "cxb",
+    "Key": "put-a-very-long-secret-here-change-me",
+    "AccessTokenMinutes": 120
+  },
   "AllowedHosts": "*"
 }
